# SpaceNinjas

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  Fwd.hpp  Game.cpp  Game.hpp  GameControls.cpp  GameControls.hpp  TextureCache.cpp  TextureCache.hpp  ViewControl.cpp  ViewControl.hpp  WindowDebugInfo.cpp  WindowDebugInfo.hpp  b2_user_settings.h  main.cpp  pch.hpp
assets/: frag.glsl  save.json  vert.glsl
bash/: sort-files.sh
cmake/: EnableCoroutines.cmake  FindFMOD.cmake  FindGLEW.cmake  FindImGUI.cmake  FindLua.cmake  FindSDL.cmake  Libraries.cmake  ReduceCompileTime.cmake
doc/: SpaceNinjas - Game Design Document.odt  Transformable.xoj
gameplay/: Animation.hpp  Body.cpp  Body.hpp  BodyType.hpp  CollisionManager.cpp  CollisionManager.hpp  DataBody.cpp  DataBody.hpp  DataFixture.hpp  Hostile.hpp  Living.cpp  Living.hpp  LookAtTarget.hpp  Missile.hpp  PlayerControl.cpp  PlayerControl.hpp  PlayerProcess.cpp  PlayerProcess.hpp  PlayerShoot.cpp  PlayerShoot.hpp  Save.cpp  Save.hpp  Stage.cpp  Stage.hpp  StageSceneNode.cpp  StageSceneNode.hpp  StageWorld.cpp  StageWorld.hpp  Turret.cpp  Turret.hpp  UIStage.cpp  UIStage.hpp  Victory.hpp  VictoryMenu.cpp  VictoryMenu.hpp
media/: AudioEngine.cpp  AudioEngine.hpp  ResourceCache.hpp  TextureCache.cpp  TextureCache.hpp  Window.cpp  Window.hpp  WindowDebugInfo.cpp  WindowDebugInfo.hpp
process/: Action.cpp  Action.hpp  CoProcess.cpp  CoProcess.hpp  Process.cpp  Process.hpp  ProcessPool.cpp  ProcessPool.hpp  ProcessQueue.cpp  ProcessQueue.hpp  ProcessStack.cpp  ProcessStack.hpp  Wait.cpp  Wait.hpp
sn/: CMakeLists.txt
sn/include/: Fwd.hpp  Game.hpp  GameControls.hpp
sn/include/gameplay/components/: Animation.hpp  CanAttack.hpp  Hostile.hpp  Living.hpp  LookAtTarget.hpp  Missile.hpp  Name.hpp  Turret.hpp
sn/include/stage/: BodyType.hpp  CollisionManager.hpp  DataBody.hpp  DataFixture.hpp  Save.hpp  Stage.hpp  StageSceneNode.hpp  StageWorld.hpp  VictoryMenu.hpp
sn/include/stage/lua/: LuaAPI.hpp  LuaEngine.hpp  Thread.hpp
sn/include/stage/physics/: BodyBuilder.hpp
sn/include/stage/player/: PlayerControl.hpp  PlayerSceneNode.hpp  PlayerShoot.hpp
sn/include/test/: Test.hpp  TestBox2D.hpp  TestInput.hpp  TestSpriteSheet.hpp  TestTransformable.hpp  TestTransparent.hpp
sn/include/ui/: Input.hpp  MenuStage.hpp  StoryMessage.hpp  VerticalListMenu.hpp
sn/src/: Game.cpp  GameControls.cpp  main.cpp
sn/src/gameplay/components/: CanAttack.cpp  Living.cpp  Name.cpp  Turret.cpp
sn/src/stage/: CollisionManager.cpp  DataBody.cpp  DataFixture.cpp  Save.cpp  Stage.cpp  StageSceneNode.cpp  StageWorld.cpp  VictoryMenu.cpp
sn/src/stage/lua/: LuaAPI.cpp  LuaEngine.cpp  Thread.cpp
sn/src/stage/physics/: BodyBuilder.cpp
sn/src/stage/player/: PlayerControl.cpp  PlayerSceneNode.cpp  PlayerShoot.cpp
sn/src/test/: Test.cpp  TestBox2D.cpp  TestInput.cpp  TestSpriteSheet.cpp  TestTransformable.cpp  TestTransparent.cpp
sn/src/ui/: Input.cpp  MenuStage.cpp  StoryMessage.cpp  VerticalListMenu.cpp
sne/: CMakeLists.txt
sne/include/b2/: DebugDraw.hpp  World.hpp  b2.hpp  iterate_body.hpp
sne/include/b2/user_settings/: b2_user_settings.h
sne/include/ft/: FTException.hpp  Font.hpp  FontType.hpp  Glyph.hpp  Text.hpp
sne/include/ft/private/: Check.hpp  DynamicRectPacker.hpp  FT.hpp  Face.hpp  FontPacker.hpp
sne/include/ft/private/raii/: Face.hpp  Library.hpp  Stroker.hpp
sne/include/gl/: GL.hpp  Texture.hpp  Vertex.hpp  VertexArray.hpp
sne/include/im/: ImBase.hpp  ImBaseFormatFloat.hpp  ImBaseRange.hpp  ImBool.hpp  ImFloat.hpp  ImFloat2.hpp  ImGUI.hpp  ImInt.hpp  ImTime.hpp
sne/include/lua/: Coroutine.hpp  Lua.hpp  LuaException.hpp  LuaGuard.hpp
sne/include/media/: AudioEngine.hpp  SDL.hpp  TextureCache.hpp  Window.hpp  WindowDebugInfo.hpp
sne/include/media/ase/: Frame.hpp  SheetCache.hpp  SpriteSheet.hpp
sne/include/media/input/: Action.hpp  InputListener.hpp  UnifiedInput.hpp
sne/include/media/scene/: SceneNode.hpp  SceneStack.hpp
sne/include/process/: Action.hpp  Process.hpp  ProcessQueue.hpp  Wait.hpp
sne/src/b2/: DebugDraw.cpp  World.cpp
sne/src/ft/: FTException.cpp  Font.cpp  FontType.cpp  Text.cpp
sne/src/ft/private/: DynamicRectPacker.cpp  FT.cpp  Face.cpp  FontPacker.cpp
sne/src/ft/private/raii/: Face.cpp  Library.cpp  Stroker.cpp
sne/src/gl/: Circle.cpp  ConvexShape.cpp  GL.cpp  Line.cpp  Shader.cpp  Shape.cpp  Sprite.cpp  Texture.cpp  Transformable.cpp  Vertex.cpp  VertexArray.cpp
sne/src/im/: ImBool.cpp  ImFloat.cpp  ImFloat2.cpp  ImInt.cpp  ImTime.cpp
sne/src/lua/: Coroutine.cpp  LuaException.cpp  LuaGuard.cpp
sne/src/media/: AudioEngine.cpp  DebugWindow.cpp  SDL.cpp  TextureCache.cpp  Window.cpp  WindowDebugInfo.cpp
sne/src/media/ase/: SheetCache.cpp  SpriteSheet.cpp
sne/src/media/input/: Action.cpp  Axis.cpp  AxisAction.cpp  BoolAction.cpp  InputListener.cpp  Key.cpp  UnifiedInput.cpp  VectorAction.cpp
sne/src/media/scene/: SceneNode.cpp  SceneStack.cpp
sne/src/process/: Action.cpp  CoProcess.cpp  Process.cpp  ProcessPool.cpp  ProcessQueue.cpp  ProcessStack.cpp  Wait.cpp
snk/: CMakeLists.txt  IO.hpp  LazyResource.hpp  Rect.hpp  algorithm.hpp  fmt.hpp  formatter.hpp  io.cpp  io.hpp  lazy_resource.hpp  list_iterator.hpp  logging.cpp  logging.hpp  math.hpp  offset_of.hpp  swapmove.hpp  unused.hpp  version.cpp  version.hpp
snk/binpacking/: GuillotineBinPack.h  Rect.h
snk/include/: GridPosition.hpp  Rect.hpp  exception.hpp  formatter.hpp  guard.hpp  io.hpp  logging.hpp  math.hpp  source_location.hpp  str.hpp  string_litteral.hpp  version.hpp
snk/include/binpacking/: MaxRectsBinPack.h
snk/src/: exception.cpp  source_location.cpp  str.cpp  version.cpp
snk/src/binpacking/: GuillotineBinPack.cpp  MaxRectsBinPack.cpp  Rect.cpp
snk/src/time/: Clock.cpp  FPSCounter.cpp  Time.cpp  Timer.cpp
snk/time/: Clock.hpp  FPSCounter.hpp  Time.cpp  Time.hpp  Timer.cpp
stage/: CollisionManager.cpp  CollisionManager.hpp  DataBody.cpp  DataBody.hpp  DataFixture.cpp  DataFixture.hpp  Save.hpp  Stage.cpp  Stage.hpp  StageSceneNode.cpp  StageSceneNode.hpp  StageWorld.cpp  StageWorld.hpp  (+2 more)
(+157 files in other folders)
